	* configs/stm3210e-eval/nsh2: Enable FAT long file name support
	* sched/sem_timedwait.c: Add the standard sem_timedwait() interface.
	* graphics/nxfonts/nxfonts_getfont.c, nxfonts_bitmap.c,
	  Makefile.source, and include/nuttx/nxfonts.h: Support for multiple
	  fonts included.  A new interface, nxf_getfonthandle() takes a font
	  ID and returns a handle that is now used at all other font interfaces
	  to specify which of the multiple fonts to use.
	* arch/arm/src/lpc17xx/lpc17_syscon.h: Fix typo (reported by Li Zhuoyi).
	* configs/stm3210e-eval/nsh2: Extended to support two new commands:
	  'msconn' will connect the USB mass storage device; 'msdis' will
	  disconnect the USB storage device.
	* tools/bdf-converter.c.  This C file is used to build the bdf-converter
	  program.  The bdf-converter program be used to convert fonts in Bitmap
	  Distribution Format (BDF) into fonts that can be used in the NX graphics
	  system.
	* include/nuttx/nx:  Move all NX header files from include/nuttx to 
	  include/nuttx/nx.
	* drivers/usbdev/usbdev_usbstorage.c and arch/arm/src/stm32/stm32_usbdev.c:
	  Correct a memory leak when the USB mass storage driver is connected and
	  then disconnected from the target.  The write requests were not being
	  freed.  NOTE that the unregister logic in the STM32 needed to call
	  stm32_reset() in order to return the write requests to the USB mass
	  storage driver; it is possible that a similar but could exist for other
	  architectures.
	* graphics/nxfonts/nxfonts_*.h:  Add serveral more new fonts
	* arch/z80/src/ez80/ez80_serial.c: Fix some errors in serial driver
	  setup for UART1 (submitted by Paul Osmialowski).
	* drivers/input/tsc2007.c and include/nuttx/input/*:  Add a generic NuttX
	  touchscreen interface.  Add a driver for the TI TSC2007 touchscreen
	  controller.
	* graphics/nxglib/lcd and fb:  Add low level routines to set single pixels.
	* lib/math/lib_b16atan2.c:  Add a fixed precision atan2() function

